refactor(resources): establish canonical resource definitions
OreVein remediation milestone 2. One validated, data-driven definition
per managed resource, replacing the knowledge that was scattered across
ManagedDeposits, ORE_TYPES, VeinPlacementValidation and a Java tool
predicate -- without adding a third catalogue beside the two that
already existed.

ManagedDeposit grew into ResourceDefinition rather than being replaced
by it. That record was already the healthiest resource model here: the
only one expressing its extraction tool as a tag and its yield as
configuration. It has gained the depleted state, the regeneration
duration, the generation shape and a reference to Mining progression,
moved into data/britannia_mod/resources/resources.json, and
ManagedDeposits is now a view over it -- family == SEDIMENT. The record
itself is deleted, not deprecated, because a parallel system is exactly
what this was not supposed to become.

Mining progression stays where it was. ResourceDefinition carries no
Mining number and has no field that could hold one; it names a mineable
and ResourceCatalog proves the reference is sound -- the mineable exists,
is ACTIVE, its category agrees with the resource's family, and the two
catalogues claim exactly the same blocks. Neither file can gain or lose
a block for a resource without the other, and every ACTIVE mineable must
be claimed by exactly one resource, so a Mining resource with no
configured extraction tag fails the load instead of reaching a
permissive default.

Extraction authorization is now data on both sides. The Mining half had
no tag at all -- milestone 1 left it as instanceof QualityToolItem --
so britannia_mod:mining_pickaxes is the pickaxe's half of the
arrangement clay and silica already had. Coverage is unchanged:
britannia_mod:pickaxe is the only registered QualityToolItem and the
only registered BritanniaPickaxeItem, so a tag holding that one item
admits precisely what the predicate admitted. The pickaxe and the
shov